--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@
     analytics.load("KOn9EMgkYyB76QdhDZVDfAtqHQemogbH");
     }}();
   </script>
+  
+ <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NPFKPWW');</script>
+<!-- End Google Tag Manager --> 
+  
+  
+  
+  
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NPFKPWW"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->  
+  
   <header>
     <div class="topContainer">
       <img class="logo" src="images/logo.svg" alt="blogr-landing-page">
