--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script>
 window.dataLayer = window.dataLayer || [];
 dataLayer.push({
-'user_id': '123456'
+'event': 'NewSubscriber'
  });
 </script>   
   
