--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         capable of producing even the most complicated sites.</p>
       </article>
     </section>
+    <section id="section4">
+     <h2>Video Title</h2>
+      <p>This is a paragraph about the video below:</p>
+      <iframe id="ytplayer" type="text/html" width="640" height="360"
+        src="https://www.youtube.com/embed/wjpiIvlrlR0"
+        frameborder="0"></iframe> 
+     </section> 
   </main>
   <footer>
     <img src="images/logo.svg">
